--- a/1.html
+++ b/1.html
@@ -6,12 +6,13 @@
 </head>
 <body>
   <h1><a href="index.html">♥♡수연♥♡</a></h1>
-    <img src="sky3.jpg"width=30%>
+  <img src="수연3.jpg" width=30%>
   <ol>
-<li><a href="1.html"> MBTI와 좋아하는 것들</a></li>
-<li><a href="2.html"> 취미</a></li>
-<li><a href="3.html"> TMI</a></li>
+    <li><a href="1.html"> MBTI와 좋아하는 것들</a></li>
+    <li><a href="2.html"> 취미</a></li>
+    <li><a href="3.html"> TMI</a></li>
 </ol>
+<h2>TMI(too much information)</h2>
 <h2>MBTI와 좋아하는  <a href="https://www.youtube.com/watch?v=OMRZevAb_jU"target="_blank" title="https://www.youtube.com/watch?v=OMRZevAb_jU">  </a></h2>
 <p>
 
