--- a/2.html
+++ b/2.html
@@ -3,16 +3,27 @@
 <html>
 <head>
 <title>SKY</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-14GLTVQZFM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-14GLTVQZFM');
+</script>
 </head>
 <body>
   <h1><a href="index.html">♥♡수연♥♡</a></h1>
-  <img src="수연.jpg"width=30%>
+  <img src="수연2.jpg" width=30%>
   <ol>
     <li><a href="1.html"> MBTI와 좋아하는 것들</a></li>
     <li><a href="2.html"> 취미</a></li>
     <li><a href="3.html"> TMI</a></li>
 </ol>
 <h2>She loves<a href="https://www.youtube.com/watch?v=OMRZevAb_jU"target="_blank" title="https://www.youtube.com/watch?v=OMRZevAb_jU"> this <u>song</u> </a></h2>
+<p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/H5v3kku4y6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <p>Come on, Harry, we wanna say goodnight to you<br>
   빨리 받아요 해리, 잘자라는 말을 해주고 싶단 말이에요!<br>
   Holdong me back, Gravity's holding me back<br>
