--- a/3.html
+++ b/3.html
@@ -3,6 +3,15 @@
 <html>
 <head>
 <title>SKY</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3S5YKTYLBM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3S5YKTYLBM');
+</script>
 </head>
 <body>
   <h1><a href="index.html">♥♡수연♥♡</a></h1>
