--- a/3.html
+++ b/3.html
@@ -4,13 +4,13 @@
 <head>
 <title>SKY</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3S5YKTYLBM"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2XTKN5MBCR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3S5YKTYLBM');
+  gtag('config', 'G-2XTKN5MBCR');
 </script>
 </head>
 <body>
