--- a/1.html
+++ b/1.html
@@ -14,25 +14,27 @@
 </script>
 </head>
 <body>
-  <h1><a href="index.html">♥♡수연♥♡</a></h1>
-  <img src="수연3.jpg" width=30%>
+  <h1><a href="index.html">sky</a></h1>
   <ol>
-    <li><a href="1.html"> MBTI와 좋아하는 것들</a></li>
-    <li><a href="2.html"> 취미</a></li>
-    <li><a href="3.html"> TMI</a></li>
+    <li><a href="1.html"> 회고(回顧)</a></li>
+    <li><a href="2.html"> 미정.</a></li>
+    <li><a href="3.html"> 미정.</a></li>
 </ol>
 <h2>TMI(too much information)</h2>
-<h2>MBTI와 좋아하는  <a href="https://www.youtube.com/watch?v=OMRZevAb_jU"target="_blank" title="https://www.youtube.com/watch?v=OMRZevAb_jU">  </a></h2>
+<h2>회고(回顧)</h2>
 <p>
-
-
-  <strong><u>좋아하는 거</u></strong><br>
-  초코! 그리고 초코! 특히 투썸플레이스 딸기가 들어간 초코케익을 엄청 무진장 좋아한다!<br>
-  책 읽는 것을 좋아한다. 소설을 좋아하고!<br>
-  소설 중에서는 판타지 소설을 좋아한다!<br>
-  디즈니 애니메이션을 즐겨보고 그 중에서 뽑는 명작은 '엔칸토'!<br>
-    <img src="엔칸토.jpg"width=10%>
-  웹툰 가담항설을 추천해줬고, 나는 애니메이션 UP을 추천하고 싶다!<br>
+  <strong><u>서시(序詩)</u></strong><br>
+                                1944.11.20<br>
+  죽는 날까지 하늘을 우러러<br>
+  한 점 부끄럼이 없기를,<br>
+  잎새에 이는 바람에도<br>
+  나는 괴로워했다.<br>
+  별을 노래하는 마음으로<br>
+  모든 죽어가는 것을 사랑해야지<br>
+  그리고 나한테 주어진 길을 <br>
+  걸어가야겠다.<br>
+<br>
+  오늘 밤에도 별이 바람에 스치운다.<br>
 
 
 </p>
