--- a/3.html
+++ b/3.html
@@ -14,12 +14,11 @@
 </script>
 </head>
 <body>
-  <h1><a href="index.html">♥♡수연♥♡</a></h1>
-    <img src="수연.jpg"  width=30%>
+  <h1><a href="index.html">sky</a></h1>
   <ol>
-<li><a href="1.html"> MBTI와 좋아하는 것들</a></li>
-<li><a href="2.html"> 취미</a></li>
-<li><a href="3.html"> TMI</a></li>
+    <li><a href="1.html"> 회고(回顧)</a></li>
+    <li><a href="2.html"> 미정.</a></li>
+    <li><a href="3.html"> 미정.</a></li>
 </ol>
 <h2>TMI(too much information)</h2>
 <p>
