--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <html>
 <head>
 <title>SKY</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2XTKN5MBCR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2XTKN5MBCR');
+</script>
 </head>
 <body>
-  <h1><a href="index.html">♥♡수연♥♡</a></h1>
-    <img src="수연3.jpg"width=30%>
+  <h1><a href="index.html">sky</a></h1>
   <ol>
-<li><a href="1.html"> MBTI와 좋아하는 것들</a></li>
-<li><a href="2.html"> 취미</a></li>
-<li><a href="3.html"> TMI</a></li>
+    <li><a href="1.html"> 회고(回顧)</a></li>
+    <li><a href="2.html"> 미정.</a></li>
+    <li><a href="3.html"> 미정.</a></li>
 </ol>
-<h2>김수연!(sky)</h2>
-<p>스스로를 어떻게 생각할지 모르지만, 사랑받기에 충분한 자격이 있고, 사랑받아 마땅한 사람임을 잊지 마세요!
-적어도 나한테는 사랑받아도 될 자격이 충분합니다.</p>
+<h2>ALL STOP</h2>
+<p></p>
 </body>
 </html>
