--- a/2.html
+++ b/2.html
@@ -14,77 +14,39 @@
 </script>
 </head>
 <body>
-  <h1><a href="index.html">♥♡수연♥♡</a></h1>
-  <img src="수연2.jpg" width=30%>
+  <h1><a href="index.html">sky</a></h1>
   <ol>
-    <li><a href="1.html"> MBTI와 좋아하는 것들</a></li>
-    <li><a href="2.html"> 취미</a></li>
-    <li><a href="3.html"> TMI</a></li>
+    <li><a href="1.html"> 회고(回顧)</a></li>
+    <li><a href="2.html"> 새로운 길.</a></li>
+    <li><a href="3.html"> 미정.</a></li>
 </ol>
-<h2>She loves<a href="https://www.youtube.com/watch?v=OMRZevAb_jU"target="_blank" title="https://www.youtube.com/watch?v=OMRZevAb_jU"> this <u>song</u> </a></h2>
+<h2>새로운 길</h2>
 <p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/H5v3kku4y6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-<p>Come on, Harry, we wanna say goodnight to you<br>
-  빨리 받아요 해리, 잘자라는 말을 해주고 싶단 말이에요!<br>
-  Holdong me back, Gravity's holding me back<br>
-  끌어당기고 있어, 중력이 날 끌어당기고 있어<br>
-  I want you to hold out the palm of your hand<br>
-  네가 손을 내밀어 주면 좋을 텐데<br>
-  why don't we leaveo it at that?
-  그냥 이쯤에서 그만할까?<br>
-  Nothing to say, When everthing gets in the way<br>
-  모든게 앞을 가로막을 때면, 딱히 할 말도 없어<br>
-  Seems you cannon be replaced<br>
-  넌 누구와도 바꿀 수 없는 사람이고<br>
-  And I'm the one who will stay, Ooh<br>
-  난 여기에 남아있을 사람이지<br>
-  In this world, It's just us<br>
-  이 세상엔, 우리뿐이야<br>
-  You know it's not the same as it was<br>
-  이젠 예전과 다르다는 걸 너도 알잖아<br>
-  In this world, It's just us<br>
-  이 세상엔, 너와 나뿐이지만<br>
-  You know it's not the same as it was<br>
-  예전 같지 않다는 걸 너도 잘 알잖아<br>
-  As it was, As it was<br>
-  예전엔 그랬지만, 그땐 그랬지만<br>
-  You know it's not the same<br>
-  이젠 달라졌다는 걸 알잖아<br>
-  </p><p>
-  Answer the phone, Harry you're no good alone<br>
-  전화를 받아, "해리 넌 혼자 있으면 안돼" <br>
-  Why are you sitting at home on the floor?<br>
-  왜 집 바닥에 홀로 앉아 있니?<br>
-  What kind of pills are you on?<br>
-  도대체 무슨 약을 먹고 있길래?<br>
-  Ringing the bell, And nobody;s coming to help<br>
-  신호를 , 아무도 도와주러 오지 않아<br>
-  Your daddy lives by himself, He just wants to know that you're well, Ooh<br>
-  홀로 사는 네 아버지는, 그저 네가 잘 지낸다고만 믿고 싶어 <br>
-  In this world, It's just us<br>
-  이 세상에는, 단지 우리뿐이야<br>
-  You know it's not the same as it was<br>
-  이젠 예전과 다르다는 걸 너도 알잖아<br>
-  In this world, It's just us<br>
-  이 세상에는, 우리 둘뿐이지만<br>
-  You know it's not the same as it was<br>
-  예전 같지 않다는 거 누구보다 잘 알잖아<br>
-  As it was, As it was<br>
-  예전처럼은, 전에 그랬던 것처럼은<br>
-  You know it's not the same<br>
-  알잖아, 이젠 예전과 다르다는 걸<br>
-  Go home, Get ahead, Light speed internet<br>
-  집으로 가, 남들보다 빠르게. 빛의 속도로 퍼지는 소식들<br>
-  I don't wnat to talk about the way that it was<br>
-  지나간 일들에 대해 얘기하고 싶지 않아<br>
-  Leave America, Two kids follow her<br>
-  미국을 떠나, 그녀를 따르는 두 아이<br>
-  I don't want to talk about who's doing it first<br>
-  누가 먼저 시작했는지 따지고 싶지 않아<br>
-  As it was, You know it's not the same as it was<br>
-  예전과는, 예전과는 다르다는 걸 너도 알잖아<br>
-  As it was, As it was<br>
-  예전처럼은, 그때처럼은 <br>
+  1938. 5월<br>
+  <br>
+  내를 건너서 숲으로<br>
+  고개를 넘어서 마을로<br>
+<br>
+  어제도 가고 오늘도 갈 <br>
+  나의 길 새로운 길<br>
+<br>
+  민들레가 피고 까치가 날고<br>
+  아가씨가 지나고 바람이 일고<br>
+<br>
+  나의 길은 언제나 새로운 길 <br>
+  오늘도... 내일도...<br>
+<br>
+  내를 건너서 숲으로<br>
+  고개를 넘어서 마을로<br>
+</p>
+<p>
+  <a><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/aRl2hi1hxVQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a>
+  <br>
+  <br>
+  그대여 힘이 돼주오<br>
+  나에게 주어진 길<br>
+  찾을 수 있도록<br>
+  - 가리워진 길 (故유재하) 中 -
 </p>
 </body>
 </html>
