--- a/1.html
+++ b/1.html
@@ -17,7 +17,7 @@
   <h1><a href="index.html">sky</a></h1>
   <ol>
     <li><a href="1.html"> 회고(回顧)</a></li>
-    <li><a href="2.html"> 미정.</a></li>
+    <li><a href="2.html"> 새로운 길.</a></li>
     <li><a href="3.html"> 미정.</a></li>
 </ol>
 <h2>회고(回顧)</h2>
