--- a/3.html
+++ b/3.html
@@ -18,10 +18,42 @@
   <ol>
     <li><a href="1.html"> 회고(回顧)</a></li>
     <li><a href="2.html"> 새로운 길.</a></li>
-    <li><a href="3.html"> 미정.</a></li>
+    <li><a href="3.html"> 2022.07.27</a></li>
 </ol>
-<h2></h2>
+<h2>2022.07.27</h2>
 <p>
+  <a><iframe width="560" height="315" src="https://www.youtube.com/embed/G0ofW1OOTrU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a>
+</p>
+<p>
+먼저 24일 서울로 올라가 3일간 서울에서 시간을 보냈다.<br>
+시골사람의 눈으로 본 서울은 정말 바빴다.<br>
+그 이면에는 높은 빌딩들과 수많은 사람들로 가득차 있었고 숨이 턱턱 막혔다.<br>
+이번에 서울에 올라갈 때, 그 어떠한 것에도 연연하고 싶지 않아 옷과 세면도구 말고는 아무것도 가지고 가지 않았다.<br>
+그냥 생각을 가다듬고 싶었고, 집에 있고 싶지 않았기에 그냥 계획없이 서울로 올라왔다.<br>
+이런 나를 반겨주는 친구들이 있음에 감사함을 느꼈고,<br>
+있는 동안 편안히 쉴수 있도록 배려해주는 친구에게 말하지 않아도 전해지는 따뜻한 마음을 느꼈다.<br>
+밤 12시에 날 보러 온 친구도 있었고, 내가 서울에 있는 동안 항상 함께 했던 친구에게도 많은 고마움을 느꼈다.<br>
+시간은 야속하게도 우릴 기다려주지도 않고, 또 언제그랬냐는듯이 훅 지나간다.<br>
+그 순간순간을 함께했던 친구들에게 많은 고마움과 변치 않을 우정에 다시 한번 에너지를 얻고 집으로 돌아왔다.<br>
+물론 올 때도, 기차를 놓치는 바람에 집에 밤 12시 40분에 오는 불상사가 일어났지만,<br>
+그럼에도 집에 올 수 있음에 감사함을 느꼈다.<br>
+일기를 쓰면서 생각을 정리해본다.<br>
+먼저 이 사이트를 접속할지도 의문이지만, 그럼에도 난 웹사이트를 살려놓을 것이다.<br>
+나에게 순간순간을 잊지 않게 할 수 있는 것이며, 살다가 또 살다가 힘들면 다시 돌아오는 안식처이기 때문이다.<br>
+최근에는 여러모로 힘들었다. 그러면서도 점점 다가오는 개강과 군대가 날 압박해온다.<br>
+그렇다해도 버텨낼것이며, 악으로 깡으로 버텨낼것이다.<br>
+사실 너무 힘들다. 몸이 좋지 않아서 떠나보낸 것이 아니란걸 알아줬으면 좋겠다. 그것은 문제가 되지 않는다.<br>
+다만 '내가 누군가를 좋아한다는 사실이 그사람에게 상처가 될 수 있다'는 말이 나에게 너무나 큰 두려움이었다.<br>
+그래서 그러고 싶지 않은데도 그렇지 않은척 보내줘야했다.<br>
+나로 인해 상처받을까봐 더 힘들어질까봐 그게 무서웠다.<br>
+그래서 너무 머리가 아팠고, 마음은 무거웠다. 그래서 정상적인 생활을 하기 힘들었다.<br>
+축 처진 일상에 에너지를 불어넣고자 서울에 올라갔다.<br>
+돌아와서도 많은 걱정들이 나에게는 가득하다.<br>
+학교에 가면 그 아이를 마주칠텐데, 혹여나 나를 불편해하지 않을까.. 나 때문에 힘들어하지 않을까.. 날 피해다닐까봐..<br>
+그래서 군대도 내년에 갈려고 했던 군대를 하루라도 빨리 갈려고 종강하자마자 12월 26일에 가기로 한것이다.<br>
+군대에 다녀오면 모든 것이 해결될 것이라는 그런 무책임한 생각은 하지 않는다.<br>
+다만 그 아이가 아픈 상처가 아물고, 넘어져도 스스로 일어날 수 있는 아이로 성장해 있기를 기대하고 있다.<br>
+그 아이는 어떨지 모르지만, 난 아직도 기다리고 있고, 앞으로도 기다리고 있을 것이다.<br>
 
 </p>
 </body>
