--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <ol>
     <li><a href="1.html"> 회고(回顧)</a></li>
     <li><a href="2.html"> 새로운 길.</a></li>
-    <li><a href="3.html"> 미정.</a></li>
+    <li><a href="3.html"> 2022.07.27</a></li>
 </ol>
 <h2>ALL STOP</h2>
 <p></p>
