--- a/1.html
+++ b/1.html
@@ -19,6 +19,8 @@
     <li><a href="1.html"> 회고(回顧) </a></li>
     <li><a href="2.html"> 새로운 길. </a></li>
     <li><a href="3.html"> 2022.07.27 </a></li>
+    <li><a href="4.html"> 2022.08.02</a></li>
+
 </ol>
 <h2>회고(回顧)</h2>
 <p>
